# Step-Detection-using-AI-Deep-Learning

./: .dockerignore  .env.example  API_DOCUMENTATION.md  BUILD_ENHANCEMENT_SUMMARY.md  CNN.ipynb  CNN_TensorFlow_Clean.ipynb  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.prod  FASTAPI_SETUP_COMPLETE.md  LSTM.ipynb  MODAL_DEPLOYMENT.md  OPTIMIZED_DEPLOYMENT.md  OPTIMIZED_DEPLOYMENT_GUIDE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  README_COMPLETE.md  README_NEW.md  Transformer.ipynb  WEBSOCKET_CONTROL_DOCS.md  WEBSOCKET_CONTROL_DOCS_V2.md  analyze_dataset.py  build-and-run.sh  build-optimized.sh  build.sh  cli.py  debug_steps.py  deploy.sh  docker-compose.optimized.yml  docker-compose.prod.yml  docker-compose.yml  initialize_model.py  launcher.py  main.py  modal_app.py  nginx.conf  pyproject.toml  realtime_step_detector.py  requirements.txt  (+16 more)
.github/workflows/: ci-cd.yml
Sample Data/person_2/: ClippedawindaRecording_20230217132921.csv
Sample Data/person_4/: ClippedawindaRecording_20230124151117.csv  ClippedawindaRecording_20230124153538.csv  (+5 more)
config/: config.db  config.yaml  settings.py
docker/: .dockerignore  Dockerfile.dev  Dockerfile.prod  docker-compose.dev.yml  docker-compose.prod.yml  k8s-deployment.yml  nginx.conf
docs/: API.md  ARCHITECTURE.md  BUILD_SCRIPTS.md  CONFIGURATION.md  CONFIG_API.md  DEPLOYMENT.md  GETTING_STARTED.md  PERFORMANCE.md  PROJECT_SUMMARY.md  README.md  STRUCTURE.md  TESTING.md  TRAINING.md  TROUBLESHOOTING.md
logs/: step_detection_session.json
models/: model_metadata.json  model_metadata_balanced.json  step_detection_model.keras  step_detection_model_balanced.keras  trained_step_detection_model.pth
notebooks/: CNN_TensorFlow.ipynb  CNN_TensorFlow_Clean.ipynb
scripts/: build-all.sh  build-dev.sh  build.sh  deploy.sh  quick-setup.sh  setup-docker.sh
src/: initialize_model.py  run_api.py  run_demo.py  step_detection_api.py
tests/: __init__.py  test_package.py  test_step_detection.py
(+36 files in other folders)
