[project]
name = "step-detection-deep-learning"
version = "0.1.0"
description = "Step Detection using Deep Learning Models (CNN, LSTM, Transformer)"
authors = [{ name = "Step Detection Team" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "flask>=3.1.1",
    "fastapi>=0.115.13",
    "uvicorn>=0.34.3",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=23.0.0", "flake8>=6.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
