[project]
name = "step-detection-using-ai-deep-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.14",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "modal>=1.1.0",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "pyyml>=0.0.2",
    "rich>=13.7.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
    "uvicorn>=0.34.3",
    "websockets>=15.0.1",
]
